--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="UTF-8">
 <head>
     <meta name="viewport" content= "width=device-width, user-scalable=no">
-    <link rel="icon" href="assets/media/tasa_logo.svg">
+    <link rel="icon" href="assets/media/logo_till_black.svg">
     <link rel="stylesheet" href="index.css">
     <script src="information.js"></script>
     <script src="dragDropTouch.js"></script>
@@ -29,11 +29,11 @@
                 <div class="div-background-middle">
                     <div class="div-middle">
                         <div class="div-p-odot">
-                            <p class="p-odot">יוזמת פרוייקט: סמ"ר גל גנסין</p>
-                            <p class="p-odot">מנהלת פרוייקט: סמ"ל דורין חתוקה</p>
                             <p class="p-odot">פיתוח: רב"ט מעיין אשר</p>
                             <p class="p-odot">גרפיקאית: רב"ט לוטם גרוס</p>
-                            <p class="p-odot">רמ"ד טי"ל: רס"ן מיגל לויתן</p>
+                            <p class="p-odot">תכנון ואפיון פרוייקט: סמ"ר גל גנסין</p>
+                            <p class="p-odot">מנהלת פרוייקט: סמ"ל דורין חתוקה</p>
+                            <p class="p-odot">רמ"ד טי"ל: רס"מ שלומי אוגרן</p>
                         </div>
                         <img src="assets/media/till_whitelogo.svg" alt="till_whitelogo" class="till-logo">
                     </div>
@@ -57,6 +57,11 @@
 
             <div class="drop-page"> 
                 <div class="sortToGroupsContainer"></div>
+                <div class="div-message">
+                    <div class="message">
+                        <p>אתם עדיין יכולים לשנות</p>
+                    </div>
+                </div>
             </div>
 
             <div class="finish-page">
